# aiwolf-nlp-llm-judge

./: CLAUDE.md  README.md  pyproject.toml
config/: .env.sample  evaluation_criteria.yaml  prompts.yaml  settings.yaml
data/input/json/main_truck_5/: 1778468640_CanisLupus_gotsumorinlp_redhood_yatolab_yharada.json  1778468975_CanisLupus_Ty-TakutiX_gotsumorinlp_ninetailed_yatolab.json  1778469569_Oxymoron_bmd_maverick_redhood_sunamelli.json  (+267 more)
src/: cli.py
src/analysis/: __init__.py  __main__.py  correlation.py  cross_model.py  loader.py  meta.py  plots.py  runner.py  summary.py
src/evaluation/: __init__.py  base_evaluator.py
src/evaluation/loaders/: criteria_loader.py  settings_loader.py
src/evaluation/models/: __init__.py  config.py  criteria.py  llm_response.py  result.py
src/game/: detector.py  models.py
src/llm/: __init__.py  batch.py  client.py  evaluator.py  factory.py  formatter.py  prompt_loader.py  prompt_renderer.py
src/llm/providers/: __init__.py  anthropic_batch.py  anthropic_client.py  gemini_batch.py  gemini_client.py  openai_batch.py  openai_client.py
src/processor/: batch_orchestrator.py  batch_processor.py  game_processor.py  run_directory.py
src/processor/models/: config.py
src/processor/pipeline/: __init__.py  data_preparation.py  evaluation_execution.py  game_context.py  result_writing.py  team_aggregation.py
tests/: test_applicable_when.py  test_batch_orchestrator.py  test_game_detector.py  test_llm_response_ranking.py  test_processing_config.py  test_prompt_renderer.py  test_run_directory.py  test_team_aggregation.py
(+77 files in other folders)
