[project]
name = "aiwolf-nlp-llm-judge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiwolf-nlp-common>=0.6.10",
    "anthropic>=0.40.0",
    "google-genai>=0.3.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.9",
    "openai>=1.102.0",
    "pandas>=3.0.3",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
